welcome.lessons.welcome.array.array123.Array123.scala.error
array123:2: error: illegal start of simple pattern
  for(<- 0 to nums.length){
      ^array123:6: error: '<-' expected but '}' found.
} 
^